--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "my personal website",
   "main": "server.js",
   "scripts": {
+    "start": "./node_modules/.bin/nodemon server.js -e html,css,js,json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -20,5 +21,13 @@
   "bugs": {
     "url": "https://github.com/arnellebalane/arnellebalane.com/issues"
   },
-  "homepage": "https://github.com/arnellebalane/arnellebalane.com#readme"
+  "homepage": "https://github.com/arnellebalane/arnellebalane.com#readme",
+  "dependencies": {
+    "express": "^4.14.0",
+    "morgan": "^1.7.0",
+    "nconf": "^0.8.4",
+    "nodemon": "^1.10.0",
+    "nunjucks": "^2.4.2",
+    "winston": "^2.2.0"
+  }
 }
