--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/arnellebalane/arnellebalane.com#readme",
   "dependencies": {
+    "consolidate": "^0.14.1",
     "express": "^4.14.0",
     "morgan": "^1.7.0",
     "nconf": "^0.8.4",
