--- a/package.json
+++ b/package.json
@@ -30,5 +30,15 @@
     "nodemon": "^1.10.0",
     "nunjucks": "^2.4.2",
     "winston": "^2.2.0"
+  },
+  "devDependencies": {
+    "babel-core": "^6.14.0",
+    "babel-preset-es2015": "^6.14.0",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-cssmin": "^0.1.7",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^2.0.0"
   }
 }
