--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-babel": "^6.1.2",
-    "gulp-cssmin": "^0.1.7",
+    "gulp-clean-css": "^2.0.12",
     "gulp-imagemin": "^3.0.3",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^2.0.0"
