--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "gulp-autoprefixer": "^3.1.1",
     "gulp-babel": "^6.1.2",
     "gulp-clean-css": "^2.0.12",
+    "gulp-htmlmin": "^2.0.0",
     "gulp-imagemin": "^3.0.3",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^2.0.0"
