--- a/static/manifest.json
+++ b/static/manifest.json
@@ -4,8 +4,13 @@
   "description": "Arnelle Balane's Website",
   "icons": [
     {
-      "src": "/static/images/icon.png",
+      "src": "/static/images/icon-144.png",
       "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
+      "src": "/static/images/icon-192.png",
+      "sizes": "192x192",
       "type": "image/png"
     }
   ],
