update app manifest short name property

--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Arnelle Balane",
-  "short_name": "Arnelle Balane",
+  "short_name": "abalane",
   "description": "Arnelle Balane's Website",
   "icons": [
     {
