move babelrc config inside package.json

--- a/package.json
+++ b/package.json
@@ -44,5 +44,8 @@
     "gulp-imagemin": "^3.0.3",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^2.0.0"
+  },
+  "babel": {
+    "presets": ["es2015"]
   }
 }
