--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "consolidate": "^0.14.1",
     "express": "^4.14.0",
+    "gulp-cached": "^1.1.1",
     "helmet": "^2.1.2",
     "morgan": "^1.7.0",
     "nconf": "^0.8.4",
@@ -46,6 +47,8 @@
     "gulp-uglify": "^2.0.0"
   },
   "babel": {
-    "presets": ["es2015"]
+    "presets": [
+      "es2015"
+    ]
   }
 }
