--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "nconf": "^0.8.4",
     "nodemon": "^1.10.0",
     "nunjucks": "^2.4.2",
+    "run-sequence": "^1.2.2",
     "serve-favicon": "^2.3.0",
     "winston": "^2.2.0"
   },
