--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "morgan": "^1.8.2",
     "nconf": "^0.8.4",
     "nunjucks": "^3.0.1",
+    "serve-favicon": "^2.4.3",
     "winston": "^2.3.1"
   },
   "devDependencies": {
