--- a/static/manifest.json
+++ b/static/manifest.json
@@ -10,6 +10,10 @@
     "src": "static/images/icon-192.png",
     "type": "image/png",
     "sizes": "192x192"
+  }, {
+    "src": "static/images/icon-512.png",
+    "type": "image/png",
+    "sizes": "512x512"
   }],
   "start_url": "/",
   "display": "fullscreen",
