--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "nconf": "^0.8.4",
     "nunjucks": "^3.0.1",
     "serve-favicon": "^2.4.3",
+    "sw-offline-google-analytics": "^0.0.25",
     "winston": "^2.3.1"
   },
   "devDependencies": {
