--- a/package.json
+++ b/package.json
@@ -21,6 +21,18 @@
     "winston": "^2.3.1"
   },
   "devDependencies": {
-    "nodemon": "^1.11.0"
+    "babel-core": "^6.25.0",
+    "babel-preset-es2015": "^6.24.1",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-cssnano": "^2.1.2",
+    "gulp-uglify": "^3.0.0",
+    "nodemon": "^1.11.0",
+    "pump": "^1.0.2"
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
   }
 }
