--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-cssnano": "^2.1.2",
+    "gulp-htmlmin": "^3.0.0",
     "gulp-uglify": "^3.0.0",
     "nodemon": "^1.11.0",
     "pump": "^1.0.2"
