--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-babel": "^6.1.2",
     "gulp-cssnano": "^2.1.2",
     "gulp-htmlmin": "^3.0.0",
+    "gulp-imagemin": "^3.3.0",
     "gulp-uglify": "^3.0.0",
     "nodemon": "^1.11.0",
     "pump": "^1.0.2"
