--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "consolidate": "^0.14.5",
     "express": "^4.15.3",
+    "helmet": "^3.6.1",
     "morgan": "^1.8.2",
     "nconf": "^0.8.4",
     "nunjucks": "^3.0.1",
