--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "consolidate": "^0.14.5",
+    "date-fns": "^1.28.5",
     "express": "^4.15.3",
     "helmet": "^3.6.1",
     "morgan": "^1.8.2",
