--- a/static/manifest.json
+++ b/static/manifest.json
@@ -18,5 +18,6 @@
   "start_url": "/",
   "display": "fullscreen",
   "theme_color": "#ffeb3b",
-  "background_color": "#ffffff"
+  "background_color": "#ffffff",
+  "gcm_sender_id": "913849576353"
 }
