--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "body-parser": "^1.18.1",
     "consolidate": "^0.14.5",
+    "date-fns": "^1.29.0",
     "express": "^4.15.3",
     "firebase-admin": "^5.2.1",
     "helmet": "^3.6.1",
