--- a/functions/package.json
+++ b/functions/package.json
@@ -2,9 +2,9 @@
   "name": "functions",
   "description": "Cloud Functions for Firebase",
   "dependencies": {
-    "firebase-admin": "~5.4.0",
-    "firebase-functions": "^0.7.0",
-    "web-push": "^3.2.4"
+    "firebase-admin": "5.9.1",
+    "firebase-functions": "0.8.1",
+    "web-push": "3.3.0"
   },
   "private": true
 }
