--- a/package.json
+++ b/package.json
@@ -3,46 +3,7 @@
   "version": "1.0.0",
   "description": "my personal website",
   "main": "app.js",
-  "scripts": {
-    "start": "node bin/www",
-    "dev": "nodemon bin/www",
-    "populate-data": "scripts/fetch-github-data.js && scripts/fetch-medium-data.js"
-  },
   "repository": "git@github.com:arnellebalane/arnellebalane.com.git",
   "author": "Arnelle Balane <arnellebalane@gmail.com>",
-  "license": "MIT",
-  "dependencies": {
-    "body-parser": "^1.18.1",
-    "consolidate": "0.15.0",
-    "date-fns": "^1.29.0",
-    "express": "^4.15.3",
-    "firebase-admin": "5.9.1",
-    "helmet": "3.12.0",
-    "morgan": "^1.8.2",
-    "nconf": "0.10.0",
-    "nunjucks": "3.1.2",
-    "request": "^2.83.0",
-    "serve-favicon": "^2.4.3",
-    "sw-offline-google-analytics": "^0.0.25",
-    "winston": "^2.3.1"
-  },
-  "devDependencies": {
-    "babel-core": "^6.25.0",
-    "babel-preset-es2015": "^6.24.1",
-    "del": "^3.0.0",
-    "gulp": "^3.9.1",
-    "gulp-babel": "7.0.1",
-    "gulp-cssnano": "^2.1.2",
-    "gulp-htmlmin": "4.0.0",
-    "gulp-imagemin": "4.1.0",
-    "gulp-uglify": "^3.0.0",
-    "nodemon": "1.17.1",
-    "pump": "3.0.0",
-    "run-sequence": "2.2.1"
-  },
-  "babel": {
-    "presets": [
-      "es2015"
-    ]
-  }
+  "license": "MIT"
 }
