--- a/package.json
+++ b/package.json
@@ -5,5 +5,10 @@
   "main": "index.js",
   "repository": "git@github.com:arnellebalane/arnellebalane.com.git",
   "author": "Arnelle Balane <arnellebalane@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {},
+  "devDependencies": {
+    "webpack": "4.6.0",
+    "webpack-cli": "2.0.15"
+  }
 }
