add babel-register and babel-preset-env to devDependencies

--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "license": "MIT",
   "dependencies": {},
   "devDependencies": {
+    "babel-preset-env": "1.6.1",
+    "babel-register": "6.26.0",
     "webpack": "4.6.0",
     "webpack-cli": "2.0.15"
   }
