--- a/package.json
+++ b/package.json
@@ -12,5 +12,10 @@
     "babel-register": "6.26.0",
     "webpack": "4.6.0",
     "webpack-cli": "2.0.15"
+  },
+  "babel": {
+    "presets": [
+      "env"
+    ]
   }
 }
