--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "babel-preset-env": "1.6.1",
     "babel-register": "6.26.0",
+    "html-webpack-plugin": "3.2.0",
     "webpack": "4.6.0",
     "webpack-cli": "2.0.15"
   },
