--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-preset-env": "1.6.1",
     "babel-register": "6.26.0",
     "css-loader": "0.28.11",
+    "file-loader": "1.1.11",
     "html-webpack-plugin": "3.2.0",
     "style-loader": "0.21.0",
     "webpack": "4.6.0",
