--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "html-webpack-plugin": "3.2.0",
     "mini-css-extract-plugin": "0.4.0",
     "webpack": "4.6.0",
-    "webpack-cli": "2.0.15"
+    "webpack-cli": "2.0.15",
+    "webpack-pwa-manifest": "3.6.2"
   },
   "babel": {
     "presets": [
