--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "file-loader": "1.1.11",
     "html-webpack-plugin": "3.2.0",
     "mini-css-extract-plugin": "0.4.0",
+    "optimize-css-assets-webpack-plugin": "4.0.0",
     "webpack": "4.6.0",
     "webpack-cli": "2.0.15",
     "webpack-pwa-manifest": "3.6.2"
