--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "webpack-cli": "2.0.15",
     "webpack-pwa-manifest": "3.6.2"
   },
+  "engines": {
+    "node": ">= 8.11.1"
+  },
   "babel": {
     "presets": [
       "env"
