--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,8 @@ node_js:
 before_install: npm install -g greenkeeper-lockfile
 before_script: greenkeeper-lockfile-update
 after_script: greenkeeper-lockfile-upload
+
+branches:
+  only:
+    - master
+    - /^greenkeeper\/.*$/
