--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "optimize-css-assets-webpack-plugin": "4.0.0",
     "webpack": "4.6.0",
     "webpack-cli": "2.0.15",
-    "webpack-pwa-manifest": "3.6.2"
+    "webpack-pwa-manifest": "3.6.2",
+    "workbox-webpack-plugin": "3.1.0"
   },
   "engines": {
     "node": ">= 8.11.1"
