--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "html-webpack-plugin": "3.2.0",
     "mini-css-extract-plugin": "0.4.0",
     "netlify-lambda": "0.4.0",
+    "npm-run-all": "4.1.2",
     "optimize-css-assets-webpack-plugin": "4.0.0",
     "webpack": "4.6.0",
     "webpack-cli": "2.0.15",
