--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "netlify-lambda": "0.4.0",
     "npm-run-all": "4.1.2",
     "optimize-css-assets-webpack-plugin": "4.0.0",
+    "preload-webpack-plugin": "3.0.0-alpha.3",
     "webpack": "4.6.0",
     "webpack-cli": "2.0.15",
     "webpack-pwa-manifest": "3.6.2",
