--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "my personal website",
   "main": "index.js",
   "scripts": {
+    "clean": "npm-run-all --parallel prebuild prebuild:functions",
     "prebuild": "rm -rf build",
     "build": "webpack",
     "build:watch": "webpack --watch",
     "prebuild:functions": "rm -rf build-functions",
     "build:functions": "netlify-lambda build functions",
+    "prebuild:all": "npm run clean",
     "build:all": "npm-run-all --parallel build build:functions",
     "test": "echo 'NO TESTS YET, BUT THIS SHOULD PASS!'"
   },
