Use latest versions of babel preset-env and register

--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "axios": "0.18.0"
   },
   "devDependencies": {
-    "babel-preset-env": "1.7.0",
-    "babel-register": "6.26.0",
+    "@babel/preset-env": "7.1.6",
+    "@babel/register": "7.0.0",
     "css-loader": "1.0.1",
     "file-loader": "2.0.0",
     "html-webpack-plugin": "3.2.0",
@@ -40,7 +40,7 @@
   },
   "babel": {
     "presets": [
-      "env"
+      "@babel/preset-env"
     ]
   }
 }
