--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "netlify-lambda": "1.0.3",
     "npm-run-all": "4.1.5",
     "optimize-css-assets-webpack-plugin": "5.0.1",
-    "preload-webpack-plugin": "3.0.0-alpha.3",
+    "preload-webpack-plugin": "3.0.0-beta.3",
     "webpack": "4.26.1",
     "webpack-cli": "3.1.2",
     "webpack-pwa-manifest": "3.7.1",
