--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,22 @@
 language: node_js
-node_js:
-  - "8.11.1"
 
-before_install: npm install -g greenkeeper-lockfile
-before_script: greenkeeper-lockfile-update
-after_script: greenkeeper-lockfile-upload
+node_js:
+  - "11"
+  - "10"
+  - "8"
+
+cache: npm
+
+before_install:
+  - npm install -g greenkeeper-lockfile
+
+install: npm ci
+
+before_script:
+  - greenkeeper-lockfile-update
+
+after_script:
+  - greenkeeper-lockfile-upload
 
 branches:
   only:
