--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "@babel/preset-env": "7.1.6",
     "@babel/register": "7.0.0",
     "css-loader": "1.0.1",
+    "eslint": "5.9.0",
+    "eslint-config-arnellebalane": "3.3.0",
+    "eslint-plugin-unicorn": "6.0.1",
     "file-loader": "2.0.0",
     "html-webpack-plugin": "3.2.0",
     "mini-css-extract-plugin": "0.4.5",
