--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "npm-run-all": "4.1.5",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "preload-webpack-plugin": "3.0.0-beta.3",
+    "stylelint": "9.8.0",
+    "stylelint-config-arnellebalane": "1.1.0",
     "webpack": "4.26.1",
     "webpack-cli": "3.1.2",
     "webpack-pwa-manifest": "3.7.1",
