--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "prebuild:functions": "npm run clean:functions",
     "build:functions": "netlify-lambda build functions",
     "build": "npm-run-all --parallel build:static build:functions",
-    "lint:js": "eslint source/**/*.js"
+    "lint:js": "eslint source/**/*.js",
+    "lint:css": "stylelint source/**/*.css"
   },
   "repository": "git@github.com:arnellebalane/arnellebalane.com.git",
   "author": "Arnelle Balane <arnellebalane@gmail.com>",
@@ -65,6 +66,14 @@
     },
     "globals": {
       "AmbientLightSensor": true
+    }
+  },
+  "stylelint": {
+    "extends": [
+      "stylelint-config-arnellebalane"
+    ],
+    "rules": {
+      "no-descending-specificity": null
     }
   }
 }
