--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "eslint-plugin-unicorn": "6.0.1",
     "file-loader": "2.0.0",
     "html-webpack-plugin": "3.2.0",
+    "husky": "1.2.0",
+    "lint-staged": "8.1.0",
     "mini-css-extract-plugin": "0.4.5",
     "netlify-lambda": "1.0.3",
     "npm-run-all": "4.1.5",
