--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "prebuild:functions": "npm run clean:functions",
     "build:functions": "netlify-lambda build functions",
     "build": "npm-run-all --parallel build:static build:functions",
-    "lint:js": "eslint source/**/*.js",
+    "lint:js": "eslint source/**/*.js functions/**/*.js",
     "lint:css": "stylelint source/**/*.css",
     "lint": "npm-run-all --sequential lint:js lint:css"
   },
@@ -65,7 +65,8 @@
       "sourceType": "module"
     },
     "env": {
-      "browser": true
+      "browser": true,
+      "node": true
     },
     "globals": {
       "AmbientLightSensor": true
