--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "prebuild:functions": "npm run clean:functions",
     "build:functions": "netlify-lambda build functions",
     "build": "npm-run-all --parallel build:static build:functions",
-    "lint:js": "eslint source/**/*.js functions/**/*.js",
-    "lint:css": "stylelint source/**/*.css",
+    "lint:js": "eslint \"{source,functions}/**/*.js\"",
+    "lint:css": "stylelint \"source/**/*.css\"",
     "lint": "npm-run-all --sequential lint:js lint:css"
   },
   "repository": "git@github.com:arnellebalane/arnellebalane.com.git",
