Lint and fix linter errors in webpack config

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "prebuild:functions": "npm run clean:functions",
     "build:functions": "netlify-lambda build functions",
     "build": "npm-run-all --parallel build:static build:functions",
-    "lint:js": "eslint \"{source,functions}/**/*.js\"",
+    "lint:js": "eslint \"{source,functions}/**/*.js\" \"*.js\"",
     "lint:css": "stylelint \"source/**/*.css\"",
     "lint": "npm-run-all --sequential lint:js lint:css"
   },
