--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "stylelint-config-arnellebalane": "1.1.0",
     "webpack": "4.26.1",
     "webpack-cli": "3.1.2",
+    "webpack-dev-server": "3.1.10",
     "webpack-pwa-manifest": "3.7.1",
     "workbox-webpack-plugin": "3.6.3"
   },
