--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "build": "npm-run-all --parallel build:static build:functions",
     "lint:js": "eslint \"{source,functions}/**/*.js\" \"*.js\"",
     "lint:css": "stylelint \"source/**/*.css\"",
-    "lint": "npm-run-all --sequential lint:js lint:css"
+    "lint": "npm-run-all --sequential lint:js lint:css",
+    "serve": "webpack-dev-server --compress"
   },
   "repository": "git@github.com:arnellebalane/arnellebalane.com.git",
   "author": "Arnelle Balane <arnellebalane@gmail.com>",
