--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-config-arnellebalane": "3.3.0",
     "eslint-plugin-unicorn": "6.0.1",
     "file-loader": "2.0.0",
+    "html-critical-webpack-plugin": "2.1.0",
     "html-webpack-plugin": "3.2.0",
     "husky": "1.2.0",
     "lint-staged": "8.1.0",
