Add Cache-Control rules for static assets and service worker file

--- a/netlify.toml
+++ b/netlify.toml
@@ -10,3 +10,15 @@
 [context.deploy-preview.environment]
   NODE_ENV = "production"
   NPM_CONFIG_PRODUCTION = "false"
+
+[[headers]]
+  for = "/*"
+
+  [headers.values]
+    Cache-Control = "public,max-age=31536000"
+
+[[headers]]
+  for = "/sw.js"
+
+  [headers.values]
+    Cache-Control = "no-cache"
