--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ install: npm ci
 
 before_script:
   - greenkeeper-lockfile-update
+  - npm run lint:js
+  - npm run lint:css
 
 after_script:
   - greenkeeper-lockfile-upload
