--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "html-critical-webpack-plugin": "2.1.0",
     "html-webpack-plugin": "3.2.0",
     "husky": "1.2.0",
+    "lighthouse-ci": "1.3.0",
     "lint-staged": "8.1.0",
     "mini-css-extract-plugin": "0.4.5",
     "netlify-lambda": "1.0.3",
