--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "lint:js": "eslint \"{source,functions}/**/*.js\" \"*.js\"",
     "lint:css": "stylelint \"source/**/*.css\"",
     "lint": "npm-run-all --sequential lint:js lint:css",
-    "serve": "webpack-dev-server --compress"
+    "serve": "webpack-dev-server --compress",
+    "lighthouse": "lighthouse-ci https://deploy-preview-$TRAVIS_PULL_REQUEST--arnellebalane.netlify.com"
   },
   "repository": "git@github.com:arnellebalane/arnellebalane.com.git",
   "author": "Arnelle Balane <arnellebalane@gmail.com>",
