--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,9 @@ before_script:
 after_script:
   - greenkeeper-lockfile-upload
 
+after_success:
+  - npm run lighthouse
+
 branches:
   only:
     - master
