--- a/package.json
+++ b/package.json
@@ -8,5 +8,11 @@
   "license": "MIT",
   "engines": {
     "node": ">= 8"
+  },
+  "devDependencies": {
+    "file-loader": "3.0.1",
+    "html-webpack-plugin": "3.2.0",
+    "webpack": "4.28.1",
+    "webpack-cli": "3.2.1"
   }
 }
