--- a/package.json
+++ b/package.json
@@ -10,9 +10,17 @@
     "node": ">= 8"
   },
   "devDependencies": {
+    "@babel/core": "7.2.2",
+    "@babel/preset-env": "7.2.3",
+    "@babel/register": "7.0.0",
     "file-loader": "3.0.1",
     "html-webpack-plugin": "3.2.0",
     "webpack": "4.28.1",
     "webpack-cli": "3.2.1"
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-env"
+    ]
   }
 }
