--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "file-loader": "3.0.1",
     "html-webpack-plugin": "3.2.0",
     "webpack": "4.28.1",
-    "webpack-cli": "3.2.1"
+    "webpack-cli": "3.2.1",
+    "webpack-merge": "4.2.1"
   },
   "babel": {
     "presets": [
