--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "my personal website",
   "main": "index.js",
   "scripts": {
+    "clean": "rm -rf build",
+    "prebuild": "npm run clean",
     "build": "NODE_ENV=production webpack --config config/webpack/build.babel.js"
   },
   "repository": "git@github.com:arnellebalane/arnellebalane.com.git",
