--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   "devDependencies": {
     "@babel/core": "7.2.2",
     "@babel/preset-env": "7.2.3",
+    "@babel/preset-react": "7.0.0",
     "@babel/register": "7.0.0",
+    "babel-loader": "8.0.5",
     "file-loader": "3.0.1",
     "html-webpack-plugin": "3.2.0",
     "webpack": "4.28.1",
@@ -26,7 +28,8 @@
   },
   "babel": {
     "presets": [
-      "@babel/preset-env"
+      "@babel/preset-env",
+      "@babel/preset-react"
     ]
   }
 }
