Add react and react-dom to dependencies

--- a/package.json
+++ b/package.json
@@ -31,5 +31,9 @@
       "@babel/preset-env",
       "@babel/preset-react"
     ]
+  },
+  "dependencies": {
+    "react": "16.7.0",
+    "react-dom": "16.7.0"
   }
 }
