--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "html-webpack-plugin": "3.2.0",
     "webpack": "4.28.1",
     "webpack-cli": "3.2.1",
+    "webpack-dev-server": "3.1.14",
     "webpack-merge": "4.2.1"
   },
   "babel": {
