Add serve npm script

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "clean": "rm -rf build",
     "prebuild": "npm run clean",
-    "build": "NODE_ENV=production webpack --config config/webpack/build.babel.js"
+    "build": "NODE_ENV=production webpack --config config/webpack/build.babel.js",
+    "serve": "webpack-dev-server --config config/webpack/build.babel.js"
   },
   "repository": "git@github.com:arnellebalane/arnellebalane.com.git",
   "author": "Arnelle Balane <arnellebalane@gmail.com>",
