--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@babel/preset-react": "7.0.0",
     "@babel/register": "7.0.0",
     "babel-loader": "8.0.5",
+    "css-loader": "2.1.0",
     "file-loader": "3.0.1",
     "html-webpack-plugin": "3.2.0",
+    "style-loader": "0.23.1",
     "webpack": "4.28.1",
     "webpack-cli": "3.2.1",
     "webpack-dev-server": "3.1.14",
