Enable --history-api-fallback for webpack-dev-server

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "clean": "rm -rf build",
     "prebuild": "npm run clean",
     "build": "NODE_ENV=production webpack --config config/webpack/build.babel.js",
-    "serve": "webpack-dev-server --config config/webpack/build.babel.js"
+    "serve": "webpack-dev-server --config config/webpack/build.babel.js --history-api-fallback"
   },
   "repository": "git@github.com:arnellebalane/arnellebalane.com.git",
   "author": "Arnelle Balane <arnellebalane@gmail.com>",
