--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     ]
   },
   "dependencies": {
-    "react": "16.7.0",
-    "react-dom": "16.7.0",
+    "react": "16.8.0-alpha.0",
+    "react-dom": "16.8.0-alpha.0",
     "react-router-dom": "4.3.1"
   }
 }
