--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "@babel/register": "7.0.0",
     "babel-loader": "8.0.5",
     "css-loader": "2.1.0",
+    "eslint": "5.12.0",
+    "eslint-config-arnellebalane": "3.3.0",
+    "eslint-plugin-unicorn": "6.0.1",
     "file-loader": "3.0.1",
     "html-webpack-plugin": "3.2.0",
     "style-loader": "0.23.1",
