--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@babel/preset-env": "7.2.3",
     "@babel/preset-react": "7.0.0",
     "@babel/register": "7.0.0",
+    "babel-eslint": "10.0.1",
     "babel-loader": "8.0.5",
     "css-loader": "2.1.0",
     "eslint": "5.12.0",
