Add eslint config and lint npm script

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "clean": "rm -rf build",
     "prebuild": "npm run clean",
     "build": "NODE_ENV=production webpack --config config/webpack/build.babel.js",
-    "serve": "webpack-dev-server --config config/webpack/build.babel.js --history-api-fallback"
+    "serve": "webpack-dev-server --config config/webpack/build.babel.js --history-api-fallback",
+    "lint": "eslint 'source/**/*.{ts,tsx,js,jsx}'"
   },
   "repository": "git@github.com:arnellebalane/arnellebalane.com.git",
   "author": "Arnelle Balane <arnellebalane@gmail.com>",
@@ -48,5 +49,29 @@
     "plugins": [
       "@babel/plugin-syntax-dynamic-import"
     ]
+  },
+  "eslintConfig": {
+    "extends": [
+      "arnellebalane",
+      "arnellebalane/rules/plugins/unicorn"
+    ],
+    "plugins": [
+      "unicorn"
+    ],
+    "parser": "babel-eslint",
+    "parserOptions": {
+      "sourceType": "module",
+      "ecmaVersion": 2017,
+      "ecmaFeatures": {
+        "jsx": true
+      }
+    },
+    "env": {
+      "browser": true,
+      "node": true
+    },
+    "rules": {
+      "unicorn/filename-case": ["off"]
+    }
   }
 }
