--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "babel-loader": "8.0.5",
     "css-loader": "2.1.0",
     "eslint": "5.12.0",
-    "eslint-config-arnellebalane": "3.3.0",
+    "eslint-config-arnellebalane": "4.0.0",
     "eslint-plugin-unicorn": "6.0.1",
     "file-loader": "3.0.1",
     "html-webpack-plugin": "3.2.0",
@@ -71,7 +71,9 @@
       "node": true
     },
     "rules": {
-      "unicorn/filename-case": ["off"]
+      "unicorn/filename-case": [
+        "off"
+      ]
     }
   }
 }
