--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "css-loader": "2.1.0",
     "eslint": "5.12.0",
     "eslint-config-arnellebalane": "4.0.0",
+    "eslint-plugin-react": "7.12.3",
     "eslint-plugin-unicorn": "6.0.1",
     "file-loader": "3.0.1",
     "html-webpack-plugin": "3.2.0",
