--- a/package.json
+++ b/package.json
@@ -72,6 +72,9 @@
     "env": {
       "browser": true,
       "node": true
+    },
+    "rules": {
+      "react/prop-types": ["off"]
     }
   }
 }
