Add eslintConfig.settings for react plugin

--- a/package.json
+++ b/package.json
@@ -73,6 +73,11 @@
       "browser": true,
       "node": true
     },
+    "settings": {
+      "react": {
+        "version": "detect"
+      }
+    },
     "rules": {
       "react/prop-types": ["off"]
     }
