--- a/package.json
+++ b/package.json
@@ -79,7 +79,9 @@
       }
     },
     "rules": {
-      "react/prop-types": ["off"]
+      "react/prop-types": [
+        "off"
+      ]
     }
   }
 }
