--- a/package.json
+++ b/package.json
@@ -27,6 +27,11 @@
     "@babel/preset-env": "7.2.3",
     "@babel/preset-react": "7.0.0",
     "@babel/register": "7.0.0",
+    "@types/css-modules": "1.0.0",
+    "@types/node": "10.12.18",
+    "@types/react": "16.7.18",
+    "@types/react-dom": "16.0.11",
+    "@types/react-router-dom": "4.3.1",
     "babel-eslint": "10.0.1",
     "babel-loader": "8.0.5",
     "css-loader": "2.1.0",
@@ -37,6 +42,8 @@
     "file-loader": "3.0.1",
     "html-webpack-plugin": "3.2.0",
     "style-loader": "0.23.1",
+    "ts-loader": "5.3.3",
+    "typescript": "3.2.2",
     "webpack": "4.28.1",
     "webpack-cli": "3.2.1",
     "webpack-dev-server": "3.1.14",
