Disable global-require eslint rule temporarily
Will re-enable it once I figure out how to properly handle imports of
image files in TypeScript.

--- a/.eslintrc
+++ b/.eslintrc
@@ -26,8 +26,7 @@
     }
   },
   "rules": {
-    "react/prop-types": [
-      "off"
-    ]
+    "global-require": ["off"],
+    "react/prop-types": ["off"]
   }
 }
