--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "eslint-plugin-unicorn": "6.0.1",
     "file-loader": "3.0.1",
     "html-webpack-plugin": "3.2.0",
+    "husky": "1.3.1",
+    "lint-staged": "8.1.0",
     "style-loader": "0.23.1",
     "ts-loader": "5.3.3",
     "typescript": "3.2.2",
