--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/react-dom": "16.0.11",
     "@types/react-router-dom": "4.3.1",
     "babel-eslint": "10.0.1",
+    "babel-loader": "8.0.5",
     "css-loader": "2.1.0",
     "eslint": "5.12.0",
     "eslint-config-arnellebalane": "4.0.0",
