--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "html-webpack-plugin": "3.2.0",
     "husky": "1.3.1",
     "lint-staged": "8.1.0",
+    "mini-css-extract-plugin": "0.5.0",
     "style-loader": "0.23.1",
     "ts-loader": "5.3.3",
     "typescript": "3.2.2",
