--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "husky": "1.3.1",
     "lint-staged": "8.1.0",
     "mini-css-extract-plugin": "0.5.0",
+    "optimize-css-assets-webpack-plugin": "5.0.1",
     "style-loader": "0.23.1",
+    "terser-webpack-plugin": "1.2.1",
     "ts-loader": "5.3.3",
     "typescript": "3.2.2",
     "webpack": "4.28.1",
