--- a/.eslintrc
+++ b/.eslintrc
@@ -18,7 +18,8 @@
   },
   "env": {
     "browser": true,
-    "node": true
+    "node": true,
+    "es6": true
   },
   "settings": {
     "react": {
