--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/react-router-dom": "4.3.1",
     "babel-eslint": "10.0.1",
     "babel-loader": "8.0.5",
+    "babel-plugin-transform-modern-regexp": "0.0.6",
     "css-loader": "2.1.0",
     "eslint": "5.12.0",
     "eslint-config-arnellebalane": "5.0.0",
