--- a/netlify.toml
+++ b/netlify.toml
@@ -9,6 +9,12 @@
   Cache-Control = "public,max-age=31536000"
 
 [[redirects]]
+  from = "/api/*"
+  query = {page = ":page"}
+  to = "/api/:splat/pages/:page.json"
+  status = 200
+
+[[redirects]]
   from = "/*"
   to = "/"
   status = 200
