Add comments to document rewrite rules

--- a/netlify.toml
+++ b/netlify.toml
@@ -8,17 +8,20 @@
 [headers.values]
   Cache-Control = "public,max-age=31536000"
 
+# Rewrite `/api/articles?page=1` to `/api/articles/pages/1.json`
 [[redirects]]
   from = "/api/*"
   query = {page = ":page"}
   to = "/api/:splat/pages/:page.json"
   status = 200
 
+# Rewrite `/api/articles` to `/api/articles.json`
 [[redirects]]
   from = "/api/*"
   to = "/api/:splat.json"
   status = 200
 
+# Rewrite all other paths to root
 [[redirects]]
   from = "/*"
   to = "/"
