Configure api page format through API_PAGE_FORMAT env

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,9 @@
   publish = "build"
   command = "npm run build"
 
+[build.environment]
+  API_PAGE_FORMAT = '?page={page}'
+
 [[headers]]
   for = "/*"
 
