Set moduleResolution to "node" in tsconfig.json

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "module": "esnext",
     "target": "esnext",
     "allowSyntheticDefaultImports": true,
+    "moduleResolution": "node",
     "jsx": "react"
   },
   "include": [
