Use double quotes in netlify.toml environment variables

--- a/netlify.toml
+++ b/netlify.toml
@@ -3,8 +3,8 @@
   command = "npm run build"
 
 [build.environment]
-  API_PAGE_FORMAT = '?page={page}'
-  API_PATH_EXTENSION = ''
+  API_PAGE_FORMAT = "?page={page}"
+  API_PATH_EXTENSION = ""
 
 [[headers]]
   for = "/*"
