Set temporary API_PATH_EXTENSION value

--- a/netlify.toml
+++ b/netlify.toml
@@ -4,7 +4,7 @@
 
 [build.environment]
   API_PAGE_FORMAT = "?page={page}"
-  API_PATH_EXTENSION = ""
+  API_PATH_EXTENSION = ".bleep"
 
 [[headers]]
   for = "/*"
