--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Arnelle Balane's personal website",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "serve": "eleventy --serve --port 5000",
+    "build": "eleventy"
   },
   "repository": {
     "type": "git",
