--- a/package.json
+++ b/package.json
@@ -21,6 +21,12 @@
   },
   "homepage": "https://github.com/arnellebalane/arnellebalane.com#readme",
   "devDependencies": {
-    "@11ty/eleventy": "^0.8.2"
+    "@11ty/eleventy": "^0.8.2",
+    "autoprefixer": "9.5.1",
+    "cssnano": "4.1.10",
+    "gulp": "4.0.2",
+    "gulp-cli": "2.2.0",
+    "gulp-postcss": "8.0.0",
+    "gulp-sourcemaps": "2.6.5"
   }
 }
