--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cssnano": "4.1.10",
     "gulp": "4.0.2",
     "gulp-cli": "2.2.0",
+    "gulp-imagemin": "5.0.3",
     "gulp-postcss": "8.0.0",
     "gulp-sourcemaps": "2.6.5"
   }
