--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@11ty/eleventy": "0.8.3",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.2.0",
-    "gulp-cssnano": "^2.1.3"
+    "gulp-cssnano": "^2.1.3",
+    "gulp-imagemin": "^6.0.0",
+    "imagemin-jpegoptim": "^6.0.0"
   }
 }
