--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp": "^4.0.2",
     "gulp-cli": "^2.2.0",
     "gulp-cssnano": "^2.1.3",
+    "gulp-htmlmin": "5.0.1",
     "gulp-imagemin": "^6.0.0",
     "imagemin-jpegoptim": "^6.0.0"
   }
