--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/arnellebalane/arnellebalane.com#readme",
   "devDependencies": {
     "@11ty/eleventy": "0.8.3",
+    "critical": "1.3.4",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.2.0",
     "gulp-cssnano": "^2.1.3",
