--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gulp-cssnano": "^2.1.3",
     "gulp-htmlmin": "5.0.1",
     "gulp-imagemin": "^6.0.0",
+    "gulp-terser": "1.2.0",
     "imagemin-jpegoptim": "^6.0.0"
   }
 }
