--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp": "^4.0.2",
     "gulp-cli": "^2.2.0",
     "gulp-cssnano": "^2.1.3",
+    "gulp-dom": "1.0.0",
     "gulp-htmlmin": "5.0.1",
     "gulp-imagemin": "^6.0.0",
     "gulp-terser": "1.2.0",
