Add Cache-Control header for static files

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,9 @@
 [build]
   command = "npm run build"
   publish = "_site"
+
+[[headers]]
+  for = "/static/*"
+
+  [headers.values]
+    Cache-Control = "max-age=31536000, immutable"
