Add subfont to devDependencies

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gulp-rev-all": "2.0.2",
     "gulp-rev-delete-original": "0.2.3",
     "gulp-terser": "1.2.0",
-    "imagemin-jpegoptim": "^6.0.0"
+    "imagemin-jpegoptim": "^6.0.0",
+    "subfont": "3.6.3"
   }
 }
