--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@11ty/eleventy": "0.8.3",
     "critical": "1.3.4",
+    "glyphhanger": "3.2.0",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.2.0",
     "gulp-cssnano": "^2.1.3",
@@ -37,7 +38,6 @@
     "gulp-rev-delete-original": "0.2.3",
     "gulp-size": "3.0.0",
     "gulp-terser": "1.2.0",
-    "imagemin-jpegoptim": "^6.0.0",
-    "subfont": "3.6.3"
+    "imagemin-jpegoptim": "^6.0.0"
   }
 }
