--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,9 @@
   command = "npm run build"
   publish = "_site"
 
+[context.production.environment]
+  NODE_ENV = "production"
+
 [[headers]]
   for = "/static/*"
 
