Add web app manifest file

--- a/.editorconfig
+++ b/.editorconfig
@@ -6,5 +6,5 @@ indent_style = space
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-[*.{json,yml,toml}]
+[*.{json,yml,toml,webmanifest}]
 indent_size = 2
