--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
   "homepage": "https://github.com/arnellebalane/arnellebalane.com#readme",
   "devDependencies": {
     "@11ty/eleventy": "0.8.3",
+    "@babel/core": "7.5.5",
+    "@babel/preset-env": "7.5.5",
     "critical": "1.3.4",
     "glyphhanger": "3.2.0",
     "gulp": "^4.0.2",
+    "gulp-babel": "8.0.0",
     "gulp-cli": "^2.2.0",
     "gulp-cssnano": "^2.1.3",
     "gulp-dom": "1.0.0",
@@ -41,5 +44,10 @@
     "gulp-terser": "1.2.0",
     "imagemin-jpegoptim": "^6.0.0",
     "workbox-build": "4.3.1"
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-env"
+    ]
   }
 }
