--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
   },
   "homepage": "https://github.com/arnellebalane/arnellebalane.com#readme",
   "devDependencies": {
-    "@11ty/eleventy": "0.8.3",
+    "@11ty/eleventy": "0.9.0",
     "@babel/core": "7.5.5",
     "@babel/preset-env": "7.5.5",
-    "critical": "1.3.4",
+    "critical": "1.3.6",
     "glyphhanger": "3.2.0",
     "gulp": "^4.0.2",
     "gulp-babel": "8.0.0",
@@ -37,7 +37,7 @@
     "gulp-cssnano": "^2.1.3",
     "gulp-dom": "1.0.0",
     "gulp-htmlmin": "5.0.1",
-    "gulp-imagemin": "^6.0.0",
+    "gulp-imagemin": "6.1.0",
     "gulp-rev-all": "2.0.2",
     "gulp-rev-delete-original": "0.2.3",
     "gulp-size": "3.0.0",
