Add gulp-replace to devDependencies

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "gulp-dom": "1.0.0",
     "gulp-htmlmin": "5.0.1",
     "gulp-imagemin": "6.1.0",
+    "gulp-replace": "1.0.0",
     "gulp-rev-all": "2.0.2",
     "gulp-rev-delete-original": "0.2.3",
     "gulp-size": "3.0.0",
