Use date-fns to format dates

--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "url": "https://github.com/arnellebalane/arnellebalane.com/issues"
   },
   "homepage": "https://github.com/arnellebalane/arnellebalane.com#readme",
+  "dependencies": {
+    "date-fns": "2.0.1"
+  },
   "devDependencies": {
     "@11ty/eleventy": "0.9.0",
     "@babel/core": "7.5.5",
