--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@11ty/eleventy": "0.9.0",
+    "@11ty/eleventy-plugin-syntaxhighlight": "2.0.3",
     "@babel/core": "7.5.5",
     "@babel/preset-env": "7.5.5",
     "critical": "1.3.6",
