--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "postbuild": "npm run optimize",
     "optimize": "gulp build",
     "subset-fonts": "./scripts/subset-fonts.sh",
-    "clean": "rm -rf _site"
+    "clean": "rm -rf _site",
+    "cloudinary": "gulp upload:cloudinary"
   },
   "repository": {
     "type": "git",
@@ -34,13 +35,16 @@
     "@babel/core": "7.5.5",
     "@babel/preset-env": "7.5.5",
     "critical": "1.3.6",
+    "dotenv": "8.1.0",
     "glyphhanger": "3.2.0",
     "gulp": "^4.0.2",
     "gulp-babel": "8.0.0",
     "gulp-cli": "^2.2.0",
+    "gulp-cloudinary-upload": "1.0.1",
     "gulp-cssnano": "^2.1.3",
     "gulp-dom": "1.0.0",
     "gulp-htmlmin": "5.0.1",
+    "gulp-if": "3.0.0",
     "gulp-imagemin": "6.1.0",
     "gulp-replace": "1.0.0",
     "gulp-rev-all": "2.0.2",
