--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@11ty/eleventy": "0.9.0",
+    "@11ty/eleventy-plugin-rss": "1.0.7",
     "@11ty/eleventy-plugin-syntaxhighlight": "2.0.3",
     "@babel/core": "7.5.5",
     "@babel/preset-env": "7.5.5",
